modules/gdscript/tests/scripts/analyzer/errors/vararg_bad_rest_type.gd
func f(...args: int):
	pass

func test():
	pass
